# adeploy

./: .gitignore  AGENTS.md  AI.md  Cargo.toml  DESIGN.md  LICENSE  README.md  build.rs  deploy.rhai
.github/workflows/: build-check.yml  create-uprev-pr.yml  release.yml
config_example/: client_config.toml  server_config.toml
proto/: adeploy.proto
src/: auth.rs  client.rs  config.rs  deploy.rs  deploy_log.rs  error.rs  lib.rs  main.rs  rhai_utils.rs  server.rs
src/platform_functions/: linux.rs  macos.rs  mod.rs  windows.rs
tests/: client_tests.rs  integration_tests.rs  performance_tests.rs  rhai_get_dir_entries_test.rs  rhai_list_files_test.rs  server_tests.rs  ssh_tests.rs
tests/common/: client_scenarios.rs  mod.rs  server_scenarios.rs
tests/test_data/: client_config.toml  server_config.toml
