[package]
name = "adeploy"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tonic = "0.12"
prost = "0.13"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
env_logger = "0.11"
log2 = "0.2.2"

# Auxiliary dependencies
ssh2 = "0.9"
tar = "0.4"
flate2 = "1.0"
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio-stream = "0.1"
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.22"
sha2 = "0.10"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
