[package]
name = "adeploy"
version = "0.1.3"
edition = "2021"

[dependencies]
# Core dependencies
tonic = "0.14"
prost = "0.14"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.47", features = ["full"] }
env_logger = "0.11"
log2 = "0.2.2"
tonic-prost = "0.14"

# Auxiliary dependencies
ssh2 = "0.9"
tar = "0.4"
flate2 = "1.1"
uuid = { version = "1.18", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
tokio-stream = "0.1"
anyhow = "1.0"
thiserror = "2.0"
base64 = "0.22"
sha2 = "0.10"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
rand = "0.9"
rand_core = { version = "0.6", features = ["std"] }
service-manager = "0.8"

[target.'cfg(windows)'.dependencies]
windows-service = "0.6"
windows-sys = { version = "0.52", features = ["Win32_Foundation"] }

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tempfile = "3.23"
tokio-test = "0.4"
